--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                     <ul class="navigation__list">
                         <li class="navigation__item"><a class="navigation__link navigation__link--current"
                                 href="./index.html">Studio</a></li>
-                        <li class="navigation__item"><a class="navigation__link" href="./portfolio.html">Portfolio</a>
+                        <li class="navigation__item"><a class="navigation__link" href="./mission.html">Portfolio</a>
                         </li>
-                        <li class="navigation__item"><a class="navigation__link" href="#contacts">Contacts</a></li>
+                        <li class="navigation__item"><a class="navigation__link" href="./values.html">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
